--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -7,7 +7,7 @@ log4j.rootLogger=DEBUG, CONSOLE, ERROR, WARN, INFO, DEBUG, ALL
 #输出信息到控制台CONSOLE
 log4j.appender.CONSOLE = org.apache.log4j.ConsoleAppender 
 log4j.appender.CONSOLE.Target = System.out
-log4j.appender.CONSOLE.layout = org.apache.log4j.PatternLayout
+log4j.appender.CONSOLE.layout = org.apache.log4j.SimpleLayout 
 log4j.appender.CONSOLE.layout.ConversionPattern = [%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} method:%l%n%m%n
 #-----------------------------------------------------------------------------------------------------
 #输出ERROR 级别以上的日志到error.log
